refactored grey_parrot to have the stories be more self-contained and the index file generated from the set of posts

--- a/_grey_parrot_stories/index.html
+++ b/_grey_parrot_stories/index.html
@@ -7,19 +7,24 @@ comments: true
 categories: []
 permalink: /:collection/index.html
 ---
-The Gray Parrot stories <a title="A brief history of Moose &amp; Goose" href="/moose-and-goose-stories/a-brief-history/">emerged along with</a> the <a title="Moose &amp; Goose Stories" href="/moose-and-goose-stories">Moose &amp; Goose stories</a>, but it was clear they were a different kettle of fish. More suited to a younger audience, 3yo-6yo say, they came about after a news item showed a talking grey parrot who seemed to be too clever by half.
-<p style="text-align:center;">Animals with big questions go to the grey parrot for answers,</p>
-<p style="text-align:center;">and they do get answers,</p>
-<p style="text-align:center;">but soon wish they had never asked in the first place.</p>
-These are short stories for kids, to be read aloud by a grown up at bedtime. They all follow the same theme. There are no pictures. Imaginations are essential. Participation is encouraged. <a title="yes, begged for" href="#respond">Feedback </a>is begged for.
-<ul>
-	<li><a title="The Marmalade Elephant" href="the-marmalade-elephant/">The Marmalade Elephant</a></li>
-</ul>
-<blockquote>"The marmalade elephant was not happy.
+<p>
+	The Grey Parrot stories <a title="A brief history of Moose &amp; Goose" href="/moose-and-goose-stories/a-brief-history/">emerged along with</a> the <a title="Moose &amp; Goose Stories" href="/moose-and-goose-stories">Moose &amp; Goose stories</a>, but it was clear they were a different kettle of fish. More suited to a younger audience, 3yo-6yo say, they came about after a news item showed a talking grey parrot who seemed to be too clever by half.
+</p>
+<p style="font-style: italic;">
+		Animals with big questions go to the grey parrot for answers,
+		<br>and they do get answers,
+		<br>but soon wish they had never asked in the first place.
+</p>
+<p>
+	These are short stories for kids, to be read aloud by a grown up at bedtime. They all follow the same theme. There are no pictures. Imaginations are essential. Participation is encouraged. <a title="yes, begged for" href="#respond">Feedback </a>is begged for.
+</p>
 
-His elephant friends blended in with the colours and shapes of the grass and bushes. But the marmalade elephant was a bright orange against green grass. You could almost hear how bright he was."</blockquote>
-<ul>
-	<li><a title="The Nosey Baboon" href="the-nosey-baboon/">The Nosey Baboon</a></li>
-</ul>
-<blockquote>"One night, by the river, a nosey baboon saw a bright shiny thing in the calm water, and wondered what it was."</blockquote>
-There is no commercial printing of these stories (yet). They can be read out quite satisfactorily from a smartphone (iphone, android, et al), a tablet (ipad, android, et al). In fact, field studies have shown that the gently glowing screen in a darkened room works really well, adding a sense of drama. The stories seem to transfer ok to <a title="a read-it-later service" href="http://www.instapaper.com/" target="_blank">instapaper</a>, and that gives you a route onto your Kindle (…although you’ll need the lights on to read from that). The stories can be picked up via the<a title="RSS feed of every post" href="/feed" target="_blank"> '<em>includes everything</em>'</a> RSS feed, or via the <a title="RSS feed of The Grey Parrot stories" href="feed" target="_blank">'<em>The Grey Parrot</em>' </a>RSS feed, which show the stories in the order in which they are released.
+<p>
+	{% assign sorted = (site.grey_parrot_stories | where:"layout", "post" | sort: 'date') | reverse %}
+	{% for item in sorted %}
+		<ul>
+			<li>{{ item.title }}</li>
+			<blockquote>{{ item.extract }}</blockquote>
+		</ul>
+	{% endfor %}
+</P>
