--- a/_grey_parrot_stories/index.html
+++ b/_grey_parrot_stories/index.html
@@ -13,7 +13,7 @@ permalink: /:collection/index.html
 <p style="font-style: italic;">
 		Animals with big questions go to the grey parrot for answers,
 		<br>and they do get answers,
-		<br>but soon wish they had never asked in the first place.
+		<br>but soon wish they had never asked ...
 </p>
 <p>
 	These are short stories for kids, to be read aloud by a grown up at bedtime. They all follow the same theme. There are no pictures. Imaginations are essential. Participation is encouraged. <a title="yes, begged for" href="#respond">Feedback </a>is begged for.
