added RSS for posts in one collection and for posts in all collections

--- a/_grey_parrot_stories/index.html
+++ b/_grey_parrot_stories/index.html
@@ -27,4 +27,7 @@ permalink: /:collection/index.html
 			<blockquote>{{ item.extract }}</blockquote>
 		</ul>
 	{% endfor %}
-</P>
+</p>
+<p>
+	Or <span class="rss-subscribe">subscribe <a href="feed.xml">via RSS</a></span>
+</p>
