added perfect custard story

--- a/_moose_and_goose_stories/door_sign_include.html
+++ b/_moose_and_goose_stories/door_sign_include.html
@@ -1,5 +1,5 @@
 <p>
-  Somewhere, there is a seaside town where there is an office with a door on which a sign says,
+  <em>Somewhere, there is a seaside town where there is an office with a door on which a sign says,</em>
 </p>
 <div>
   <table border="1" cellspacing="0" cellpadding="0">
