centre sign on the door

--- a/_moose_and_goose_stories/door_sign_include.html
+++ b/_moose_and_goose_stories/door_sign_include.html
@@ -2,18 +2,22 @@
   <em>Somewhere, there is a seaside town where there is an office with a door on which a sign says,</em>
 </p>
 <div>
-  <table border="1" cellspacing="0" cellpadding="0">
+  <table border="1" cellspacing="0" cellpadding="20" style="margin-left: auto;margin-right: auto;">
     <tbody>
       <tr>
         <td>
-          <p style="text-align:center;"></p>
-          <p style="text-align:center;"><strong><span style="font-family:Tahoma;font-size:x-large;">Moose &amp; Goose</span></strong></p>
-          <p style="text-align:center;"><strong><span style="font-family:Tahoma;font-size:large;">  Private Investigators </span></strong>
-          <em><span style="font-family:Tahoma;font-size:small;"> and </span><span style="font-family:Tahoma;font-size:large;">Solvers of Tricky Problems  </span></em></p>
-          <p style="text-align:right;"><strong><span style="font-family:Tahoma;font-size:medium;">  </span></strong></p>
-          <p style="text-align:center;"><strong><span style="font-family:Tahoma;font-size:medium;">  No problem is too big or too small,  </span></strong></p>
-          <p style="text-align:center;"><strong></strong><strong><span style="font-family:Tahoma;font-size:medium;">too difficult or too easy,</span></strong></p>
-          <p style="text-align:center;"><strong></strong><strong><span style="font-family:Tahoma;font-size:medium;">too weird or too obvious.</span></strong></p>
+          <p style="text-align:center;">
+            <span style="font-size:x-large;">Moose &amp; Goose</span>
+            <br><span style="font-size:large;">Private Investigators</span>
+            <br><em><span style="font-size:small;"> and </span>
+                    <span style="font-size:large;">Solvers of Tricky Problems</span></em>
+            <br>
+            <br><span style="font-size:medium;">
+              No problem is too big or too small,
+              <br>too difficult or too easy,
+              <br>too weird or too obvious.
+            </span>
+          </p>
         </td>
       </tr>
     </tbody>
