--- a/_moose_and_goose_stories/index.html
+++ b/_moose_and_goose_stories/index.html
@@ -20,7 +20,7 @@ There is a <a title="A brief history of Moose &amp; Goose" href="a-brief-histor
 
 <div></div>
 And so, to the stories. <em>There are tricky problems to solve</em>...
-
+<p class="porthole"/>
 <p>
 	{% assign sorted = (site[page.collection] | where:"layout", "post" | sort: 'sequence') %}
 	{% for item in sorted %}
