--- a/search.html
+++ b/search.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Search Results
+---
 <!-- follow notes in https://alexpearce.me/2012/04/simple-jekyll-searching -->
 
 <div id="results">
